<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activeRowLabel">Active</string>
    <string name="activity_level">Activity Level</string>
    <string name="activityLevelHeader">Activity Level</string>
    <string name="ageLabel">Age:</string>
    <string name="app_name">LifestyleApp-Spring2023</string>
    <string name="averageWorkoutLength">Average workout length:</string>
    <string name="basicMetabolicRate">Basic Metabolic Rate</string>
    <string name="bmr">BMR = </string>
    <string name="calBurnedPerWorkout">Calories burned per workout:</string>
    <string name="calPerDay">Calories/day</string>
    <string name="calPerHour">cal/hr</string>
    <string name="cancel">Cancel</string>
    <string name="dailyCalorieNeeds">Daily Calorie Needs: </string>
    <string name="dailyCalorieNeedsMessage">Daily calorie needs by activity level: </string>
    <string name="inches">inches</string>
    <string name="inchesQuantity">%1$d in.</string>
    <string name="none">None</string>
    <string name="pounds">pounds</string>
    <string name="poundsQuantity">%1$d lb.</string>
    <string name="ageAndSex">%1$s %2$s</string>
    <string name="calPerDayShort">%1$s cal/day</string>
    <string name="heightLabel">Height:</string>
    <string name="recommendedCalorieIntake">Calorie Needs  </string>
    <string name="lightlyActiviteRowLabel">Lightly Active</string>
    <string name="location">Location</string>
    <string name="name">Name</string>c
    <string name="sedentaryRowLabel">Sedentary</string>
    <string name="setAge">Set age</string>
    <string name="setHeight">Set height</string>
    <string name="setWeight">Set weight</string>
    <string name="sexLabel">Sex:</string>
    <string name="submit">Submit</string>
    <string name="temperature">Temperature</string>
    <string name="temperatureErrorMessage">There was a problem getting the temperature :(</string>
    <string name="temperatureFarenheit">%1$d °F</string>
    <string name="weightLabel">Weight:</string>
    <string name="workoutsPerWeek">Workouts per week:</string>
    <string name="workoutIntensity">Workout intensity:</string>
    <string name="workoutCalsPerDay">Workout calories per week:</string>
    <string name="calorieHeader">Calories</string>
    <string name="lightlyActiveRowLabel">Lightly Active</string>
    <string name="veryActiveRowLabel">Very Active</string>
    <string name="hints">---</string>
    <string name="yourName">Your Name</string>
    <string name="nav_button">Navigation</string>
    <string name="prof_button">Profile</string>
    <string name="bmr_button">BMR</string>
    <string name="weather_button">Weather</string>
    <string name="hikes_button">Hikes</string>
    <string name="years">years</string>
    <string name="yearsQuantity">%1$d yr.</string>
    <string name="weather">Weather</string>
    <string name="weatherErrorMessage">There was a problem getting the weather :(</string>
    <string name="Location">Location</string>
    <string name="City">City</string>
    <string name="State">State</string>
    <string name="Country">Country</string>
    <string name="Street">Street Address</string>
    <string name="zipCode">Zip Code</string>
    <string name="GotoHikesButton">Go to Hikes Near Me!</string>
    <string name="CityPrompt">Enter City Here</string>
    <string name="StatePrompt">Enter State Here</string>
    <string name="CountryPrompt">Enter Country Here</string>
    <string name="StreetPrompt">Enter Street Address Here</string>
    <string name="zipCodePrompt">Enter Zip Code Here</string>
    <string name="UseGPSLocationButton">Use Current GPS Location</string>
    <string name="SubmitNewLocationButton">Submit Location Changes</string>
    <string name="TheLifestyleApp"><u>The Lifestyle App</u></string>
    <string name="Modules">Modules</string>
    <string name="SetCaloriesPerHour">Set Calories Per Hour:</string>
    <string name="SetWorkoutsPerWeek">Set Workouts Per Week:</string>
    <string name="SetWorkoutLength">Set Workout Length:</string>
    <string name="cals">cals</string>
    <string name="workouts">workouts</string>
    <string name="minutes">minutes</string>

</resources>