<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".map.MapFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/bmrDataCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/light_gray"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/LocationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="0"
                    android:text="@string/Location"
                    android:textSize="34sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/CountryTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="4dp"
                    android:layout_marginBottom="0dp"
                    android:gravity="center"
                    android:text="@string/Country"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/CountryEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:hint="@string/CountryPrompt"
                    android:maxLength="40"
                    android:textAlignment="center"
                    android:textColor="@color/green"
                    android:textColorHint="@color/green"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/StateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="4dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:text="@string/State"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/StateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:hint="@string/StatePrompt"
                    android:maxLength="40"
                    android:textAlignment="center"
                    android:textColor="@color/green"
                    android:textColorHint="@color/green"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/CityTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="4dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:text="@string/City"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/CityEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:hint="@string/CityPrompt"
                    android:maxLength="40"
                    android:textAlignment="center"
                    android:textColor="@color/green"
                    android:textColorHint="@color/green"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/StreetTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="4dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:text="@string/Street"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/StreetEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:hint="@string/StreetPrompt"
                    android:maxLength="40"
                    android:textAlignment="center"
                    android:textColor="@color/green"
                    android:textColorHint="@color/green"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/ZipCodeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="4dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:text="@string/zipCode"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/ZipCodeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:hint="@string/zipCodePrompt"
                    android:maxLength="15"
                    android:textAlignment="center"
                    android:textColor="@color/green"
                    android:textColorHint="@color/green"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <Button
                    android:id="@+id/gotoMapButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/GotoHikesButton" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>