<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:padding="10dp"
    tools:context="com.lifestyle.bmr.BMRPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">

        <androidx.cardview.widget.CardView
            android:id="@+id/bmrCard"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="7dp"
            app:cardBackgroundColor="@color/light_gray"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activityLevelCard">

            <TextView
                android:id="@+id/activityLevelText2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_vertical"
                android:text="@string/Modules"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/activityLevelCard"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:cardBackgroundColor="@color/light_gray"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/activityLevelText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_vertical"
                android:text="@string/TheLifestyleApp"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/activityLevelDataCard"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginTop="7dp"
            app:cardBackgroundColor="@color/light_gray"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bmrCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <!-- Four square buttons -->

                    <Button
                        android:id="@+id/prof_main_fragment_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/buttonBlue"
                        android:contentDescription="@string/prof_button"
                        android:drawableTop="@drawable/profile_icon"
                        android:text="@string/prof_button"
                        android:textSize="12sp"
                        tools:backgroundTint="@color/buttonBlue" />

                    <Button
                        android:id="@+id/bmr_main_fragment_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/buttonGreen"
                        android:contentDescription="@string/bmr_button"
                        android:drawableTop="@drawable/bmr_icon"
                        android:text="@string/bmr_button"
                        android:textSize="12sp"
                        tools:backgroundTint="@color/buttonGreen"
                        tools:iconGravity="textStart"
                        tools:ignore="ButtonStyle" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <!-- Four square buttons -->

                    <Button
                        android:id="@+id/weather_main_fragment_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/buttonYellow"
                        android:contentDescription="@string/bmr_button"
                        android:drawableTop="@drawable/weather_icon"
                        android:text="@string/weather_button"
                        android:textSize="12sp"
                        tools:backgroundTint="@color/buttonYellow"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/hikes_main_fragment_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/buttonRed"
                        android:contentDescription="@string/hikes_button"
                        android:drawableTop="@drawable/hiking_icon"
                        android:text="@string/hikes_button"
                        android:textSize="12sp"
                        tools:backgroundTint="@color/buttonRed"
                        tools:ignore="ButtonStyle" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>